# marblerun

./: .gitignore  .golangci.yml  .lycheeignore  1.1.html  1.2.html  1.3.html  1.4.html  1.5.html  1.6.html  1.7.html  1.8.html  404.html  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  a.json  azure-pipelines.yml  build_with_version.cmake  core.go  core_test.go  example-manifest.json  go.mod  go.sum  grpc.go  grpc_test.go  index.html  integration_test.go  manifest-template.json  manifest.go  next.html  renovate.json  search-index-docs-default-1.1.json  search-index-docs-default-1.2.json  search-index-docs-default-1.3.json  search-index-docs-default-1.4.json  (+11 more)
.github/: release.yml  teams_payload_template.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: azure_sgx_conf.json  azure_sgx_qcnl.json  coordinator.Dockerfile  marble.Dockerfile
.github/workflows/: build-coordinator.yml  check-license.yml  deploy.yml  docs-publish.yml  docs-update-reference.yml  e2e-weekly.yaml  e2e.yaml  integration-test.yml  links.yml  lint.yml  openapi-make.yml  openapi-pr.yml  openapi-publish.yml  openapi-validate.yml  require-label.yml  unit-test.yml  unittests.yml  update-cli-reference.yml  vale.yml
1.1/: examples.html  index.html
1.1/building-services/: ego.html  gramine.html  occlum.html
1.1/category/: building-services.html  deployment.html  features.html  getting-started.html  reference.html  workflows.html
1.1/deployment/: cloud.html  kubernetes.html  on-prem.html  standalone.html
1.1/examples/: index.html
1.1/features/: attestation.html  kubernetes-integration.html  manifest.html  recovery.html  runtimes.html  secrets-management.html  transparent-TLS.html
1.1/getting-started/: concepts.html  coordinator.html  marbles.html  quickstart-sgx.html  quickstart-simulation.html  quickstart.html
1.1/reference/: cli.html  coordinator.html
1.1/workflows/: add-service.html  define-manifest.html  managing-secrets.html  monitoring.html  recover-coordinator.html  set-manifest.html  update-manifest.html  updates.html  verification.html
1.2/: index.html
1.2/architecture/: concepts.html  coordinator.html  marbles.html  security.html
1.2/building-marbles/: ego.html  gramine.html  occlum.html
1.2/deployment/: kubernetes.html  platforms.html  standalone.html
1.2/features/: attestation.html  kubernetes-integration.html  manifest.html  recovery.html  runtimes.html  secrets-management.html  transparent-TLS.html
1.3/: index.html
1.4/: index.html
1.5/: index.html
1.6/: index.html
1.7/: index.html
1.8/: index.html
api/: api.go  coordinator.pb.go  coordinator.proto  v1.go  v2.go
apidoc/: client_api_requests.go  client_api_responses.go  docs.go
architecture/: concepts.html  coordinator.html  marbles.html  security.html
building-marbles/: ego.html  gramine.html  occlum.html
cert/: main.go
certificates/: utils.go
charts/: Chart.yaml  README.md  values.yaml
cli/: main.go
cmd/: grpc_server.go  server.go
coordinator/: coordinator.go  integration_test.go  invokemain.go
deployment/: kubernetes.html  platforms.html  standalone.html
dev-docs/: hsm-setup.md  secrets.md
dockerfiles/: Dockerfile.build-base  Dockerfile.build-base-focal  Dockerfile.build-premain-occlum  Dockerfile.cli  Dockerfile.coordinator  Dockerfile.marble-injector  start.sh
docs/: .gitignore  README.md  _sidebar.md  add-service.md  attestation.md  client_api_requests.go  client_api_responses.go  confidential-computing.md  deploy.md  docs.go  docusaurus.config.js  emojivoto.md  helloworld.md  index.html  infrastructure-validation.md  monitoring.md  overview.md  package-lock.json  package.json  planned-features.md  quickstart.md  recovery.md  remote-attestation.md  secrets-management.md  service-authentication.md  service-mesh.md  set-manifest.md  setup.md  sidebars.js  trusted-infrastructure.md  updates.md  verification.md  versions.json
enclave/: coordinator.conf  coordinatormain.go  emain.cpp  emain.edl  enclave.conf  host.cpp  invokemain.go  main.c  main_test.c  marble-test.conf
features/: attestation.html  hsm-sealing.html  kubernetes-integration.html  manifest.html  recovery.html  runtimes.html  secrets-management.html  transparent-TLS.html
getting-started/: examples.html  installation.html  quickstart.html
grpc_client/: main.go
grpc_server/: main.go
http_server/: main.go
injector/: injector.go  injector_test.go
integration_test/: integration_test.go
json_parser/: main.go
libertmeshpremain/: CMakeLists.txt  README.md  main.go
marble/: CMakeLists.txt
marble/cmd/common/: common.go
marble/cmd/marble/: invokemain.go  main.go
marble/cmd/marble-test/: main.go  mesh.go  mock.go
marble/cmd/marble-test-noenclave/: main.go
marble/config/: config.go
marble/enclave/: emain.cpp  emain.edl  host.cpp
marble/marble/: files.go  marble.go  marble_test.go
marble/premain/: gramine.go  graphene.go  occlum.go  premain.go  premain_test.go  util.go
next/: index.html
pre_main/: go.mod  go.sum  pre_main.go  pre_main_test.go
premain/: pre_main.go  pre_main_test.go
quote/: interface.go  mock.go  quote.go  requirements.go  sgx.go
reference/: cli.html  coordinator.html
rpc/: client.go  coordinator.pb.go  coordinator.proto
samples/: .gitignore  manifest-template.json  manifest-template.yaml  sample-manifest.json
samples/helloc++/: CMakeLists.txt  README.md  manifest.json
samples/helloc++/app/: CMakeLists.txt  hello.cpp
samples/helloworld/: CMakeLists.txt  README.md  go.mod  hello.go  main.c  manifest.json
samples/helloworld/app/: hello.go  mesh.go
test/: integration_test.go  manifests.go
testing/: grpcclient.go
tools/: create_config.py
util/: tls.go  tls_test.go  util.go  util_test.go  version.go
webhook/: main.go
workflows/: add-service.html  backup.html  define-manifest.html  hsm-sealing.html  managing-secrets.html  monitoring.html  recover-coordinator.html  set-manifest.html  update-manifest.html  updates.html  user-authentication.html  verification.html
(+21324 files in other folders)
